Bug 107104 - Arrow is missed when opening a word document in LibreOffice, the there is transparent text box on top of arrow
Summary: Arrow is missed when opening a word document in LibreOffice, the there is tra...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: OOXML-Shapes WPS-Support
  Show dependency treegraph
 
Reported: 2017-04-11 22:02 UTC by Stuart Ng
Modified: 2018-10-22 21:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The problem doc. (35.87 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-04-11 22:02 UTC, Stuart Ng
Details
How it looks in MSO 2010 (14.25 KB, image/png)
2017-04-12 09:01 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stuart Ng 2017-04-11 22:02:07 UTC
Description:
Open the attached word document in LibreOffice (4.4. and 5.2)
Note, in word there is a transparent text box on top of an up arrow

In LibreOffice, the up arrow is not shown at all.

Steps to Reproduce:
1. Open the attached doc in Libreoffice
2. Check what is opened

Actual Results:  
Actually, the up arrow disappeared

Expected Results:
All arrows are shown (as seen in Word)


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Safari/537.36
Comment 1 Stuart Ng 2017-04-11 22:02:45 UTC
Created attachment 132492 [details]
The problem doc.
Comment 2 Xisco Faulí 2017-04-12 09:01:13 UTC
Regression introduced by

author	Miklos Vajna <vmiklos@collabora.co.uk>	2013-12-03 10:59:42 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2013-12-03 14:39:04 (GMT)
commit 57450afb768c085df0ba2344aa94b5f843060178 (patch)
tree 19a4c28083ee2414102d70db2fcf6bd8ec410799
parent ddbeaada1c7abb0fee88e709f3d6d824f06b39e0 (diff)

DOCX import: declare wps as a supported feature
This means in case we hit an mc:AlternateContent element, we will read
the mc:Choice branch of it, in case wps is the required feature, not the
mc:Fallback one, which contains the information in VML format (after a
lossy conversion).

Bisected with bibisect-43max.

Adding Cc: to Miklos Vajna
Comment 3 Xisco Faulí 2017-04-12 09:01:50 UTC
Created attachment 132503 [details]
How it looks in MSO 2010
Comment 4 Commit Notification 2017-04-25 09:49:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6e5a68f52f4e06b73f0ece3a3886f3bfc30f56d

tdf#107104 DOCX drawingML import: fix invisible arrow shape

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-04-27 19:08:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d3baea4a726d6c0cf6cb0d6a8b2c83cef4f580d&h=libreoffice-5-3

tdf#107104 DOCX drawingML import: fix invisible arrow shape

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Vasily Melenchuk (CIB) 2017-05-12 16:09:59 UTC
*** Bug 100072 has been marked as a duplicate of this bug. ***
Comment 7 vihsa 2017-05-29 10:50:32 UTC
verified.
version: 5.5.0.0.alpha0+ / build id : ec79f34 / android 5.1