tdf#107104 DOCX drawingML import: fix invisible arrow shape

This is the drawingML equivalent of commit
3d9ebded1358395ed81db7a63629b046aec2aeac (Misc improvements for docx VML
import, 2010-10-06), which made sure that shapes are never invisible
just because they have zero height or width.

For this particular bugdoc the Word-produced WW8 equivalent width is 20
twips, but let's be consistent with the VML import and just round up to
1 mm100.

Also fix two existing tests that wanted to test something else, but
implicitly asserted that some shapes indeed have zero width/height.

Change-Id: I9600424520d0a3deecc711b44622eccc041a59da