sw/qa/extras/ooxmlexport/ooxmlexport9.cxx
@@ -457,6 +457,13 @@ DECLARE_OOXMLEXPORT_TEST(testTdf106492, "tdf106492.docx")
         assertXPath(pXmlDoc, "//w:sectPr", 3);
 }
 
+DECLARE_OOXMLEXPORT_TEST(testTdf107104, "tdf107104.docx")
+{
+    CPPUNIT_ASSERT(getShape(1)->getSize().Width > 0);
+    // This failed: the second arrow was invisible because it had zero height.
+    CPPUNIT_ASSERT(getShape(2)->getSize().Width > 0);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
